fix bug result from bubbling which was selecting white space. Add timeout ids to fix overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -293,11 +293,8 @@ img.win-img {
   }
 
   #actions-buttons { 
-    grid-area: actions;
     height: 60px;
-    display: flex;
     justify-content:center;
-    align-items: center;
     
   }
   
